# cptool

./: .gitignore  .pre-commit-config.yaml  cf.py  main.py  pyproject.toml
src/cptool/: __main__.py  cf.py  handler.py  main.py  problem_list.csv  solved_list.csv
